<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.dasturchi.newketaylikstore.ui.main.MainViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.order.OrderDetailActivity">
        <TextView
            android:id="@+id/tvUm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Umumiy narx:"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="@dimen/size_15dp"
            android:layout_marginTop="@dimen/size_5dp"
            android:textSize="@dimen/text_16sp"
            android:textColor="@color/black"
            app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
            android:id="@+id/tvAllPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="15000"
            app:layout_constraintLeft_toRightOf="@+id/tvUm"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="@dimen/size_15dp"
            android:layout_marginTop="@dimen/size_5dp"
            android:textSize="@dimen/text_16sp"
            android:textColor="@color/black"
            app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
            android:id="@+id/tvIzoh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Izoh: "
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUm"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="@dimen/size_15dp"
            android:textSize="@dimen/text_16sp"
            android:textColor="@color/black"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="@dimen/size_15dp"/>

        <TextView
            android:id="@+id/tvComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Comment"
            app:layout_constraintLeft_toRightOf="@+id/tvIzoh"
            app:layout_constraintTop_toBottomOf="@+id/tvUm"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="@dimen/size_15dp"
            android:textSize="@dimen/text_16sp"
            android:textColor="@color/black"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="@dimen/size_15dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerSingleOrder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/size_7dp"
            app:layout_constraintTop_toBottomOf="@+id/tvComment"
            app:layout_constraintBottom_toTopOf="@+id/const1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/size_16dp"
            android:paddingRight="@dimen/size_16dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnReady"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#29B6F6"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/ready"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btnCancel"
                app:layout_constraintHeight_percent="0.49"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.49" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAccept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#26A69A"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/accepting"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btnCancel"
                app:layout_constraintHeight_percent="0.49"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.49" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#EF5350"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.49"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_status"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:enabled="false"
            app:layout_constraintRight_toRightOf="parent"/>

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
